
  So if you were doing this and expecting the second argument to be nil:

    User.find_by_username_and_group("sikachu")

  You'll now get `ArgumentError: wrong number of arguments (1 for 2).` You'll then have to do this:

    User.find_by_username_and_group("sikachu", nil)

  [Prem Sichanugrist]

*Rails 3.1.0 (unreleased)*

* ActiveRecord::MacroReflection::AssociationReflection#build_record has a new method signature.

  Before: def build_association(*options)
  After:  def build_association(*options, &block)

  Users who are redefining this method to extend functionality should ensure that the block is
  passed through to ActiveRecord::Base#new.

  This change is necessary to fix https://github.com/rails/rails/issues/1842.

  [Jon Leighton]

* AR#pluralize_table_names can be used to singularize/pluralize table name of an individual model:

    class User < ActiveRecord::Base
      self.pluralize_table_names = false
    end

  Previously this could only be set globally for all models through ActiveRecord::Base.pluralize_table_names. [Guillermo Iguaran]

* Add block setting of attributes to singular associations:

    class User < ActiveRecord::Base
      has_one :account
    end

    user.build_account{ |a| a.credit_limit => 100.0 }

  The block is called after the instance has been initialized. [Andrew White]

* Add ActiveRecord::Base.attribute_names to return a list of attribute names. This will return an empty array if the model is abstract or table does not exists. [Prem Sichanugrist]

* CSV Fixtures are deprecated and support will be removed in Rails 3.2.0

* AR#new, AR#create, AR#create!, AR#update_attributes and AR#update_attributes! all accept a second hash as option that allows you
  to specify which role to consider when assigning attributes. This is built on top of ActiveModel's
  new mass assignment capabilities:

    class Post < ActiveRecord::Base
      attr_accessible :title
      attr_accessible :title, :published_at, :as => :admin
    end
